cmake_minimum_required(VERSION 3.18)

project(UE4SSMods)

add_subdirectory(RE-UE4SS)
add_subdirectory(CSharpLoader)
add_subdirectory(CSharpLoaderProxy)
add_subdirectory(ExamplePluginMod)
add_subdirectory(DialoguePluginKH3)
add_subdirectory(RuntimeTransformerMod)
add_subdirectory(DBFZCharaSlots)
add_subdirectory(GGSTCharaSlots)
add_subdirectory(GBVSRCharaSlots)
add_subdirectory(GBVSRollback)
add_subdirectory(StriveFrameData)
add_subdirectory(DBMValueMod)
add_subdirectory(DNFHitboxes)