cmake_minimum_required(VERSION 3.22)

project(UE4SSMods)

# requirements
add_subdirectory(RE-UE4SS)

add_subdirectory(GBVSRollback)
# add_subdirectory(GGSTFramework)
add_subdirectory(GGSTBPPlayer)
# add_subdirectory(GGSTCharaSelect)
add_subdirectory(GGSTModManager)
add_subdirectory(GGSTLocalizeTextMod)
add_subdirectory(RIOT)
add_subdirectory(StriveFrameData)
# add_subdirectory(SuzieMod)
# add_subdirectory(GGSTUIRemake)
# add_subdirectory(GGSTExtend)